test_case/rust-lang_rust/51191_401463051_1.rs

error[E0596]: cannot borrow immutable item `self` as mutable
  --> src/main.rs:19:9
   |
19 |         (&mut self).bar(); //~ ERROR cannot borrow
   |         ^^^^^^^^^^^ cannot borrow as mutable

